<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F7"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundText"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/greeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        style="@android:style/Widget.Material.Light.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_700"
        android:ems="10"
        android:hint="@string/textHint"
        android:importantForAutofill="no"
        android:inputType="textLongMessage" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/textButton"
        android:textAlignment="center" />

    <Switch
        android:id="@+id/switch1"
        style="@style/TextAppearance.AppCompat.Widget.Switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/text_switch" />

    <CheckBox
        android:id="@+id/checkbox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_checkbox1" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_checkbox2" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="145dp"
        android:layout_height="79dp"
        android:checked="true"
        android:text="ToggleButton" />


</LinearLayout>